# lexaway-packs

./: .gitignore  LICENSE  build.py  build_music.py  build_reminders.py  manifest.json  pyproject.toml  release.sh  test_build.py  update_voices.py  voices.py
